--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "socket.io": "^4.1.3"
+    "jsonwebtoken": "^8.5.1",
+    "nanoid": "^3.1.28",
+    "socket.io": "^4.1.3",
+    "uuid": "^8.3.2"
   }
 }
